[gd_scene load_steps=11 format=3 uid="uid://cbm5jbh6id2ve"]

[ext_resource type="Texture2D" uid="uid://cus562qq56qlm" path="res://assets/sprites/environments/turret.png" id="1"]
[ext_resource type="Script" uid="uid://7l26t17xlqth" path="res://actors/enemies/Turret.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dtia60kv2ei3u" path="res://assets/sprites/environments/turret_off.png" id="3"]
[ext_resource type="Script" uid="uid://dg3ny04agcjtp" path="res://addons/ECM/Entity.gd" id="4"]
[ext_resource type="Script" uid="uid://bx28gpgdlmtid" path="res://addons/ECM/Component.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://yw0vjfqmdjje" path="res://godot4/traits/Waiter.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://cem7hg3bgikv0" path="res://assets/sprites/environments/turret_eye_closed.png" id="7"]
[ext_resource type="PackedScene" uid="uid://mjjon1epk4qn" path="res://godot4/effects/Shadow.tscn" id="8"]

[sub_resource type="Animation" id="1"]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.143587, 0.5),
"update": 0,
"values": [Vector2(3, 3), Vector2(2, 2)]
}

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[node name="Turret" type="RigidBody2D" groups=["in_camera"]]
collision_layer = 1048576
collision_mask = 10757
mass = 5000.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2")

[node name="Waiter" parent="." instance=ExtResource("6")]

[node name="Entity" type="Node" parent="."]
script = ExtResource("4")

[node name="Deadly" type="Node" parent="Entity"]
script = ExtResource("5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1")

[node name="SpriteOff" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("3")

[node name="Eye" type="Sprite2D" parent="SpriteOff"]
texture = ExtResource("7")

[node name="Shadow" parent="." instance=ExtResource("8")]
scale = Vector2(2, 2)
sprite = NodePath("../Sprite2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(0, -150, 150, 0, 0, 150, -150, 0)

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource("1")
anims/RESET = SubResource("2")

[connection signal="body_entered" from="." to="." method="_on_Turret_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
